[package]
name = "cs534-assign2"
version = "0.1.0"
authors = ["Ruichun <ruichun.ma@yale.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "node_bin"
path = "src/node.rs"

[lib]
name = "my_tcp"
path = "src/lib.rs"

[dependencies]
clap = "~2.30.0"
rand = "~0.8.3"